# wikistream-observatory

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BRIEF.md  ENGINEERING.md  LICENSE  Makefile  README.md  WORKFLOWS.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
.pi/: checkpoint.json
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: pi.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
data/replay/: README.md  recentchange_sample.jsonl
schemas/: recentchange_normalized.schema.json
services/: Dockerfile
services/dashboard/: Dockerfile
services/dashboard/app/: __init__.py  data.py  main.py
services/ingestor/: Dockerfile
services/ingestor/wikistream_ingestor/: __init__.py  (+3 more)
services/processor/: Dockerfile
specs/001-wikistream-mvp-slice/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/wikistream_observatory/: __init__.py  config.py  kafka.py  logging.py  models.py  normalization.py  quality.py  queries.py  signals.py  storage.py  time_utils.py  windows.py
tests/fixtures/: bot_spike_signals.parquet
tests/integration/: test_live_pipeline_smoke.py  test_replay_pipeline.py  test_restart_idempotence.py  test_throughput.py
tests/unit/: test_foundation.py  test_freshness.py  test_normalization.py  test_quality.py  test_replay.py  test_responsible_language.py  test_signals.py  test_windows.py
(+7 files in other folders)
