[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "wikistream-observatory"
version = "0.1.0"
description = "Local Wikimedia RecentChanges streaming observability MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.4,<3",
    "duckdb>=1.0,<2",
    "httpx>=0.27,<1",
    "httpx-sse>=0.4,<1",
    "pandas>=2.2,<3",
    "pyarrow>=16,<23",
    "streamlit>=1.36,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
